@@ -2,6 +2,7 @@
 
 - Added new applets provided by Dave
 - Added allergies to synthetic data
+- Medication refill now shows refill date
 
 # 2012-4-12
 
